# alto

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  style_requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-linux.yml  ci-macos.yml  style.yml  tests.yml
alto/: alto_logger.py  config.py  constants.py  divider.py  entrypoints.py  infras.py  main.py  output.py  ui.py  utils.py
alto/agents/: base.py  ec2.py  protocols.py
alto/agents/ec2/: __init__.py  ec2.py
alto/agents/scripts/: __init__.py
alto/examples/: __init__.py
alto/examples/ec2/: additional_paths.yml  artifacts.yml  basic_project.yml  (+3 more)
alto/images/: __init__.py  docker_image.py  meta.py  registries.py
alto/mixins/: aws_mixins.py
alto/parsers/: yml.py
alto/tasks/: apply.py  base.py  build.py  delete.py  init.py  run.py
alto/templates/: common.yml
alto/tests/: test_base_task.py  test_entrypoint.py  test_infras.py  test_init.py  test_utils.py  test_yml_parser.py
nomad/: command.py  config.py  constants.py  divider.py  entrypoints.py  infras.py  main.py  nomad_logger.py  registries.py  ui.py  utils.py
nomad/agents/: base.py  docker_agent.py  docker_on_ec2.py  ec2.py
nomad/images/: __init__.py  docker_image.py  meta.py  registries.py
nomad/parsers/: yml.py
nomad/tasks/: apply.py  base.py  build.py  delete.py  init.py  run.py
nomad/templates/: __init__.py  ec2.yml
nomad/tests/: test_base_task.py  test_entrypoint.py  test_infras.py  test_init.py  test_utils.py  test_yml_parser.py
(+124 files in other folders)
