[metadata]
name = nomad-dev
description = Run any code on the cloud, instantly.
long_description_content_type = text/markdown
long_description = file: README.md
version = 0.0.3
author = prism founders
author_email = hello@runprism.com
license = Apache-2.0
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    
[options]
packages=find_namespace:
include_package_data=True
install_requires =
    astor>=0.7
    boto3>=1
    botocore>=1
    click>=8
    PyYAML>=6
    requests>=2    
    Jinja2==3.1.2
    MarkupSafe>=2.0
    coolname>=2.2
    shortuuid>=1.0
    rich_click>=1.6.1
    beautifulsoup4>=4.12
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7
    types-requests
    build>=0.10
    twine>=4.0
jupyter =
    papermill

[options.entry_points]
console_scripts = 
    nomad = nomad.main:cli

[flake8]
ignore = E124, E128
max-line-length = 88
count = true
